[Fix] Doc put and post in same tree
