# documentations/swagger/components/paths/statics.json
@@ -35,81 +35,13 @@
                     "application/json": {
                         "schema": {
                             "$ref": "#/components/schemas/PostBody"
-                        }
-                    }
-                },
-                "description": "PostBody",
-                "required": false
-            }
-        }
-    },
-    "/api/v2/static": {
-        "post": {
-            "deprecated": false,
-            "security": [],
-            "responses": {
-                "200": {
-                    "description": "success",
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/staticsSchema"
+                        },
+                        "examples": {
+                            "example1": {
+                                "summary": "Get all french pages",
+                                "description": "Get the french pages for slug 'mon_slug' with the default fields except one field 'metadesc'",
+                                "value": {"lang":"fr","PostBody":{"limit":1,"filter":{"translation.fr.slug":"mon_slug"},"structure":{"translation.fr.metaDesc":0}}}
                             }
-                        }
-                    }
-                }
-            },
-            "parameters": [],
-            "tags": [
-                "Static"
-            ],
-            "requestBody": {
-                "content": {
-                    "application/json": {
-                        "schema": {
-                            "$ref": "#/components/schemas/PostBody"
-                        }
-                    }
-                },
-                "description": "PostBody",
-                "required": false
-            }
-        },
-        "put": {
-            "deprecated": false,
-            "security": [],
-            "responses": {
-                "200": {
-                    "description": "success",
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/staticsSchema"
-                            }
-                        }
-                    }
-                }
-            },
-            "parameters": [
-                {
-                    "name": "authorization",
-                    "in": "headers",
-                    "description": "authorization",
-                    "required": false,
-                    "deprecated": false,
-                    "schema": {
-                        "type": "string"
-                    }
-                }
-            ],
-            "tags": [
-                "Static"
-            ],
-            "requestBody": {
-                "content": {
-                    "application/json": {
-                        "schema": {
-                            "$ref": "#/components/schemas/PostBody"
                         }
                     }
                 },
@@ -138,6 +70,90 @@
             "tags": [
                 "Static"
             ]
+        }
+    },
+    "/api/v2/static": {
+        "post": {
+            "deprecated": false,
+            "summary": "Static (page) details",
+            "security": [],
+            "responses": {
+                "200": {
+                    "description": "success",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/staticsSchema"
+                            }
+                        }
+                    }
+                }
+            },
+            "parameters": [],
+            "tags": [
+                "Static"
+            ],
+            "requestBody": {
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/PostBody"
+                        },
+                        "examples": {
+                            "example1": {
+                                "summary": "Get page",
+                                "description": "Get the page for code 'mycode' with the default fields for default language",
+                                "value": {"PostBody":{"filter":{"code":"mycode"}}}
+                            }
+                        }
+                    }
+                },
+                "description": "PostBody",
+                "required": false
+            }
+        },
+        "put": {
+            "deprecated": false,
+            "summary": "Create/update static (page)",
+            "security": [],
+            "responses": {
+                "200": {
+                    "description": "success",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/staticsSchema"
+                            }
+                        }
+                    }
+                }
+            },
+            "parameters": [
+                {
+                    "name": "authorization",
+                    "in": "headers",
+                    "description": "authorization",
+                    "required": false,
+                    "deprecated": false,
+                    "schema": {
+                        "type": "string"
+                    }
+                }
+            ],
+            "tags": [
+                "Static"
+            ],
+            "requestBody": {
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/PostBody"
+                        }
+                    }
+                },
+                "description": "PostBody",
+                "required": false
+            }
         }
     }
 }
